# chatgpt-share-parser

./: .gitignore  README.md  pyproject.toml
scripts/: parse_share.py
src/chatgpt_share_parser/: __init__.py  __main__.py  cli.py  parser.py
tests/: test_parser.py
