[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-share-parser"
version = "0.1.0"
description = "Render ChatGPT shared conversation pages and extract clean transcripts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "zhangjunmengyang", email = "zhangjunmengyang@gmail.com" }
]
dependencies = [
  "playwright>=1.40,<2",
]
keywords = ["chatgpt", "parser", "playwright", "transcript", "markdown"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/zhangjunmengyang/chatgpt-share-parser"
Repository = "https://github.com/zhangjunmengyang/chatgpt-share-parser"
Issues = "https://github.com/zhangjunmengyang/chatgpt-share-parser/issues"

[project.scripts]
chatgpt-share-parser = "chatgpt_share_parser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
